# travel-time

./: .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  fly.toml
backend/: .gitignore  Cargo.toml  Procfile  api.rs  main.rs  setup.rs
backend/db/: atlas_loader.rs  mongo_repo.rs
backend/graph/: connection.rs  location.rs  mod.rs  mongo_graph_builder.rs  path.rs  tfl_graph.rs
backend/national_rail/: timetable_loader.rs
backend/src/: api.rs  main.rs  utils.rs
backend/src/db/: mongo_doc.rs
backend/src/graph/: tfl_graph.rs
backend/src/national_rail/: mod.rs  xml_timetable.rs
backend/src/tfl/: client.rs  endpoint.rs
backend/src/tfl/model/: journey_request.rs  line_request.rs  mod.rs
backend/tfl/: endpoint.rs  mod.rs
backend/tfl/model/: direct_connection.rs  line_request.rs  line_response.rs  stops_request.rs
backend/util/: mod.rs  string_util.rs
frontend/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
frontend/public/: index.html  manifest.json
frontend/src/: App.js  App.jsx  App.tsx  config.json  config.ts  index.css  index.js  utils.jsx
src/: main.rs
src/api/: client.rs  endpoint.rs  errors.rs  mod.rs  pagination.rs  param_value.rs  query_parameters.rs
src/api/model/: journey.rs  (+9 more)
src/db/: atlas_loader.rs  data_fixer.rs  graph_loader.rs  mod.rs  mongo_loader.rs  mongo_repo.rs  tfl_loader.rs
src/graph/: connection.rs  graph.rs  location.rs  mod.rs  node_pair.rs  path.rs  station.rs  tfl_graph.rs
src/national_rail/: s3.rs  timetable_loader.rs
src/tfl/: client.rs  mod.rs  param_value.rs  query_parameters.rs
(+41 files in other folders)
