[package]
name = "travel_time"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11.10", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0.25"
chrono = { version = "0.4.19", features = ["serde"] }
serde_urlencoded = "~0.7"
url = "2.2.2"
async-trait = "0.1.53"
futures = "0.3.21"
anyhow = "1.0.57"
tokio = { version = "1", features = ["full"] }