[package]
name = "travel_time"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
reqwest = { version = "0.11.10", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "^1.0.25"
chrono = { version = "0.4.19", features = ["serde"] }
serde_urlencoded = "~0.7"
url = "2.2.2"
async-trait = "0.1.53"
futures = "0.3.21"
anyhow = "1.0.57"
tokio = { version = "1", features = ["full"] }
mongodb = "2.2.1"
petgraph = { version = "0.6.0", features = ["serde-1"] }
geo = { version = "0.20.1", features = ["use-serde"] }
ball-tree = "0.3.0"
rusoto_s3 = "0.48.0"
rusoto_core = "0.48.0"
quick-xml = { version = "0.22", features = [ "serialize" ] }
flamegraph = "0.6.1"
firestorm = { version="0.4", features=["enable_system_time"] }
rocket = { version="0.5.0-rc.2", features=["json"] }
clap = { version = "3.1.18", features = ["derive"] }